# week2

./: app.db  pyproject.toml
app/: README.md  auth.py  crud.py  database.py  main.py  model.py  routes.py  schema.py
app/auth/: auth.py  dependencies.py  router.py  schema.py  service.py
app/core/: database.py  logger.py  logging_middleware.py
app/users/: model.py  repository.py  routes.py  schema.py
employee_management/: .gitignore  app.db  pyproject.toml
employee_management/app/: README.md  main.py
employee_management/app/auth/: dependencies.py  router.py  schema.py
employee_management/app/core/: database.py  logger.py  security.py
employee_management/app/employees/: model.py  repository.py  router.py  schema.py  service.py
employee_management/app/frontend/: index.html  login.html
week2_task/: .gitignore  README.md  app.db
week2_task/app/: README.md  main.py
week2_task/app/auth/: router.py  schema.py  service.py
week2_task/app/core/: config.py  database.py
week2_task/app/users/: service.py
